--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oblivity | #1 Roblox External</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
-        /* Your existing CSS styles */
         * {
             margin: 0;
             padding: 0;
@@ -15,111 +16,118 @@
         }
 
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #1e1e1e;
-            color: #fff;
-            line-height: 1.8;
-            margin: 0;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 2rem;
-            text-align: center;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            background-image: url('header-background.jpg'); /* Add background image */
-            background-size: cover;
-            background-position: center;
-        }
-
-        header h1,
-        header p {
-            color: #fff;
-            font-family: 'Arial', sans-serif; /* Change font for headings */
-        }
-
-        nav {
-            background-color: #000;
-            color: #fff;
-            padding: 1rem;
-            text-align: center;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
-
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            margin: 0 1rem;
-            padding: 0.5rem 1rem;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-
-        nav a:hover {
-            background-color: #444;
-        }
-
-        section {
-            padding: 4rem 2rem;
-            text-align: center;
-        }
-
-        button {
-            background-color: #007BFF;
-            color: #fff;
-            padding: 1.2rem 2.5rem;
-            border: 2px solid #007BFF;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 1rem;
-            transition: background-color 0.3s ease, transform 0.3s ease;
-            display: inline-block;
-        }
-
-        button:hover {
-            background-color: #0056b3;
-            color: #fff;
-            transform: scale(1.05);
-        }
-
-        footer {
-            background-color: #000;
-            color: #fff;
-            padding: 2rem 0;
-            text-align: center;
-            position: relative;
-            bottom: 0;
-            width: 100%;
+            font-family: Arial, sans-serif;
+            background: linear-gradient(to right, #0b1e34, #1f364d);
+            color: #ddd;
+            line-height: 1.6;
+            overflow-x: hidden;
         }
 
         .container {
             max-width: 1200px;
             margin: 0 auto;
+            padding: 0 20px;
+        }
+
+        header {
+            background: linear-gradient(to right, #0b1e34, #1f364d);
+            color: #fff;
+            text-align: center;
+            padding: 80px 0;
+            transition: background-color 0.3s ease;
+            position: relative;
+            z-index: 1;
+        }
+
+        header h1 {
+            font-size: 3em;
+            margin-bottom: 20px;
+            color: #fff;
+            text-transform: uppercase;
+            font-weight: bold;
+            letter-spacing: 2px;
+        }
+
+        header p {
+            font-size: 1.2em;
+            margin-bottom: 30px;
+        }
+
+        .login-button {
+            display: inline-block;
+            background-color: #0056b3;
+            color: #fff;
+            padding: 12px 24px;
+            border: none;
+            border-radius: 5px;
+            font-size: 1.1em;
+            text-decoration: none;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+
+        .login-button i {
+            margin-right: 5px;
+        }
+
+        .login-button:hover {
+            background-color: #004080;
+            transform: scale(1.05);
+        }
+
+        nav {
+            background: linear-gradient(to right, #0b1e34, #1f364d);
+            color: #fff;
+            padding: 15px 0;
+            text-align: center;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            transition: background-color 0.3s ease;
+        }
+
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 15px;
+            padding: 10px 20px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        nav a:hover {
+            background-color: #2c4d6d;
+        }
+
+        #services {
+            padding: 80px 0;
+            position: relative;
+            z-index: 1;
+        }
+
+        #services h2 {
+            font-size: 2.5em;
+            margin-bottom: 40px;
+            text-align: center;
+            color: #fff;
         }
 
         .services-container {
             display: flex;
-            justify-content: space-around;
+            justify-content: center;
+            align-items: stretch;
             flex-wrap: wrap;
-            margin-top: 2rem;
         }
 
         .service-card {
-            background-color: #333;
-            border: 1px solid #444;
+            background: linear-gradient(to right, #1f364d, #304e6d);
             border-radius: 10px;
-            padding: 2rem;
-            margin: 1rem;
+            padding: 40px 20px;
+            margin: 20px;
             text-align: center;
-            width: calc(33.33% - 2rem);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease;
-            overflow: hidden;
-            position: relative;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add box-shadow */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            flex: 0 0 calc(33.33% - 40px);
+            max-width: calc(33.33% - 40px);
         }
 
         .service-card:hover {
@@ -128,60 +136,122 @@
 
         .service-card h3 {
             color: #007BFF;
-            margin-bottom: 1rem;
-            font-size: 1.5rem; /* Increase font size */
+            font-size: 1.8em;
+            margin-bottom: 20px;
         }
 
         .service-card p {
-            color: #ccc;
-            margin-bottom: 1rem;
-            font-size: 1.1rem; /* Increase font size */
-            line-height: 1.5; /* Increase line height */
-        }
-
-        .service-card i {
-            font-size: 3rem;
-            margin-bottom: 1rem;
-        }
-
-        .service-card img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 5px;
-            margin-bottom: 1rem;
-        }
-
-        @media screen and (max-width: 768px) {
-            .service-card {
-                width: calc(50% - 2rem);
-            }
-        }
-
-        @media screen and (max-width: 480px) {
-            .service-card {
-                width: calc(100% - 2rem);
-            }
-        }
-
-        p {
-            color: #ccc;
+            color: #ddd;
+            font-size: 1.1em;
             line-height: 1.6;
+            margin-bottom: 20px;
         }
 
-        /* Increase font size for specific paragraph */
-        .faq-question {
-            font-size: 1.5rem;
+        #testimonials {
+            padding: 80px 0;
+            position: relative;
+            z-index: 1;
         }
 
-        /* Additional styles */
-
-        header h1 {
-            font-size: 2.5rem;
+        #testimonials h2 {
+            font-size: 2.5em;
+            margin-bottom: 40px;
+            text-align: center;
+            color: #fff;
         }
 
-        header p {
-            font-size: 1.2rem;
-            margin-top: 10px;
+        .testimonial {
+            margin-bottom: 40px;
+            background: linear-gradient(to right, #1f364d, #304e6d);
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
+        }
+
+        .testimonial:hover {
+            transform: translateY(-10px);
+        }
+
+        .testimonial h3 {
+            color: #007BFF;
+            font-size: 1.8em;
+            margin-bottom: 15px;
+        }
+
+        .testimonial p {
+            color: #ddd;
+            font-size: 1.1em;
+            line-height: 1.6;
+            margin-bottom: 15px;
+        }
+
+        #connect {
+            padding: 80px 0;
+            position: relative;
+            z-index: 1;
+            text-align: center;
+        }
+
+        #connect h2 {
+            font-size: 2.5em;
+            margin-bottom: 40px;
+            text-align: center;
+            color: #fff;
+        }
+
+        .social-buttons {
+            margin-top: 20px;
+        }
+
+        .social-buttons a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 15px;
+            padding: 10px 20px;
+            border-radius: 5px;
+            background-color: #7289da;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+
+        .social-buttons a:hover {
+            background-color: #677bc4;
+            transform: scale(1.05);
+        }
+
+        footer {
+            background: linear-gradient(to right, #0b1e34, #1f364d);
+            color: #fff;
+            padding: 40px 0;
+            text-align: center;
+            position: relative;
+            z-index: 1;
+        }
+
+        .footer-links {
+            margin-top: 20px;
+        }
+
+        .footer-links a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 10px;
+            transition: color 0.3s ease;
+        }
+
+        .footer-links a:hover {
+            color: #ccc;
+        }
+
+        .social-icons a {
+            color: #fff;
+            font-size: 1.5em;
+            margin: 0 10px;
+            transition: transform 0.3s ease;
+        }
+
+        .social-icons a:hover {
+            transform: translateY(-3px);
         }
 
         .purchase-button {
@@ -191,9 +261,15 @@
             padding: 12px 24px;
             border: none;
             border-radius: 5px;
-            font-size: 1rem;
+            font-size: 1.1em;
             text-decoration: none;
             transition: background-color 0.3s ease, transform 0.3s ease;
+            margin-top: 20px;
+            cursor: pointer;
+        }
+
+        .purchase-button i {
+            margin-right: 5px;
         }
 
         .purchase-button:hover {
@@ -201,127 +277,126 @@
             transform: scale(1.05);
         }
 
-        .testimonial {
-            margin-top: 3rem;
-            font-size: 1.2rem;
+        .sticky header {
+            background-color: #222;
+            padding: 20px 0;
         }
 
-        .testimonial h3 {
-            margin-top: 1.5rem;
-            font-size: 1.5rem;
+        @media screen and (max-width: 1200px) {
+            .service-card {
+                flex: 0 0 calc(50% - 40px);
+                max-width: calc(50% - 40px);
+            }
         }
 
-        .social-icons {
-            margin-top: 1.5rem;
-        }
+        @media screen and (max-width: 768px) {
+            .service-card {
+                flex: 0 0 calc(100% - 40px);
+                max-width: calc(100% - 40px);
+            }
 
-        .social-icons a {
-            color: #fff;
-            font-size: 1.5rem;
-            margin: 0 10px;
-            transition: transform 0.3s ease;
-        }
+            header h1 {
+                font-size: 2.5em;
+            }
 
-        .social-icons a:hover {
-            transform: translateY(-3px);
-        }
-
-        .email-button {
-            background-color: #007BFF;
-            color: #fff;
-            padding: 12px;
-            border: none;
-            border-radius: 5px;
-            font-size: 1rem;
-            text-decoration: none;
-            transition: background-color 0.3s ease, transform 0.3s ease;
-            margin-top: 20px;
-            display: inline-block;
-        }
-
-        .email-button:hover {
-            background-color: #0056b3;
-            transform: scale(1.05);
+            header p {
+                font-size: 1em;
+            }
         }
     </style>
 </head>
 
 <body>
-<nav>
-    <div class="container">
-        <a href="#home">Home</a>
-        <a href="#services">Features</a>
-        <a href="apply.html">Buy Now</a>
-        <a href="#contact">Contact Us</a>
-    </div>
-</nav>
+    <nav>
+        <div class="container">
+            <a href="#home"><i class="fas fa-home"></i> Home</a>
+            <a href="#services"><i class="fas fa-cogs"></i> Features</a>
+            <a href="apply.html"><i class="fas fa-shopping-cart"></i> Buy Now</a>
+            <a href="#contact"><i class="fas fa-envelope"></i> Contact Us</a>
+            <a href="#login" class="login-button" onclick="loginClicked()"><i class="fas fa-sign-in-alt"></i> Login</a>
+        </div>
+    </nav>
 
-<header>
-    <div class="container">
-        <h1>Oblivity Roblox</h1>
-        <p>Taking Roblox externals to the next level</p>
-        <a href="apply.html" class="purchase-button">Purchase Now</a>
-    </div>
-</header>
+    <header>
+        <div class="container">
+            <h1>Oblivity External</h1>
+            <p>Taking Roblox externals to the next level</p>
+            <button class="purchase-button" onclick="redirectToPurchasePage()"><i class="fas fa-shopping-cart"></i> Purchase Now</button>
+        </div>
+    </header>
 
-<section id="services">
-    <div class="container">
-        <h2>Why Choose Oblivity?</h2>
-        <div class="services-container">
-            <div class="service-card">
-                <i class="fas fa-lock fa-3x"></i>
-                <h3>Security</h3>
-                <p>Our advanced security features minimize the risk of detection and bans.</p>
+    <section id="services">
+        <div class="container">
+            <h2>Why Choose Oblivity?</h2>
+            <div class="services-container">
+                <div class="service-card">
+                    <i class="fas fa-lock fa-3x"></i>
+                    <h3>Security</h3>
+                    <p>Our advanced security features minimize the risk of detection and bans.</p>
+                </div>
+                <div class="service-card">
+                    <i class="fas fa-chart-line fa-3x"></i>
+                    <h3>Optimized Performance</h3>
+                    <p>Enjoy smooth gameplay without sacrificing performance.</p>
+                </div>
+                <div class="service-card">
+                    <i class="fas fa-code fa-3x"></i>
+                    <h3>Scripting API</h3>
+                    <p>We have a scripting system where users can create their own modules.</p>
+                </div>
             </div>
-            <div class="service-card">
-                <i class="fas fa-chart-line fa-3x"></i>
-                <h3>Optimized Performance</h3>
-                <p>Enjoy smooth gameplay without sacrificing performance.</p>
+        </div>
+    </section>
+
+    <section id="testimonials">
+        <div class="container">
+            <h2>FAQ</h2>
+            <div class="testimonial">
+                <h3>How much does Oblivity cost?</h3>
+                <p>Oblivity costs $19.99 for a lifetime.</p>
             </div>
-            <div class="service-card">
-                <i class="fas fa-headset fa-3x"></i>
-                <h3>Dedicated Support</h3>
-                <p>Our support team is ready to assist you with any issues or questions.</p>
+            <div class="testimonial">
+                <h3>What is Oblivity?</h3>
+                <p>Oblivity is a Roblox external application designed to enhance your gaming experience.</p>
+                <h3>What games does Oblivity support?</h3>
+                <p>Oblivity supports all Roblox games, although compatibility may vary.</p>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<section id="testimonials">
-    <div class="container">
-        <h2>FAQ</h2>
-        <div class="testimonial">
-            <h3>How much does Oblivity cost?</h3>
-            <p>Oblivity costs $19.99 for lifetime.</p>
+    <section id="connect">
+        <div class="container">
+            <h2>Connect With Us</h2>
+            <div class="social-buttons">
+                <a href="https://discord.gg/mEb2C8ZNAZ"><i class="fab fa-discord"></i> Join Discord</a>
+                <a href="https://t.me/oblivityupdates"><i class="fab fa-telegram"></i> Telegram</a>
+            </div>
         </div>
-        <div class="testimonial">
-            <h3>What is Oblivity?</h3>
-            <p>Oblivity is a Roblox external application designed to enhance your gaming experience.</p>
-            <h3>What games does Oblivity support?</h3>
-            <p>Oblivity supports all Roblox games, although compatibility may vary.</p>
-        </div>
-    </div>
-</section>
+    </section>
 
-<section id="contact">
-    <div class="container">
-        <h2>Contact Us</h2>
-        <p>Have questions or need assistance? Reach out to us:</p>
-        <p>Email: <a href="mailto:contact@oblivity.xyz">contact@oblivity.xyz</a></p>
-        <p>Support: <a href="mailto:support@oblivity.xyz">support@oblivity.xyz</a></p>
-    </div>
-</section>
-
-<footer>
-    <div class="container">
-        <div class="social-icons">
-            <a href="https://twitter.com/Oblivitysoft"><i class="fab fa-twitter"></i></a>
-            <a href="https://t.me/oblivityupdates"><i class="fab fa-telegram"></i></a>
-            <a href="mailto:contact@oblivity.xyz"><i class="fas fa-envelope"></i></a>
+    <footer>
+        <div class="container">
+            <div class="footer-links">
+                <a href="#">Privacy Policy</a>
+                <a href="#">Terms of Service</a>
+            </div>
+            <div class="social-icons">
+                <a href="https://twitter.com/Oblivitysoft"><i class="fab fa-twitter"></i></a>
+                <a href="mailto:contact@oblivity.xyz"><i class="fas fa-envelope"></i></a>
+            </div>
+            <p>&copy; 2022 - 2024 Oblivity Software LLC. All rights reserved.</p>
         </div>
-        <p>&copy; 2022 - 2024 Oblivity Software LLC. All rights reserved.</p>
-    </div>
-</footer>
+    </footer>
+
+    <script>
+        function redirectToPurchasePage() {
+            window.location.href = "apply.html";
+        }
+
+        function loginClicked() {
+            alert("Not implemented");
+        }
+    </script>
 </body>
 
 </html>
